--- a/robin_py/오픈API 활용.ipynb
+++ b/robin_py/오픈API 활용.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "2fe993b7",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "c36f3249",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "428028ac",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "3594dc4e",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "00002a16",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "0a423052",
    "metadata": {
     "scrolled": true
@@ -10162,7 +10162,7 @@
        " ...]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10173,7 +10173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "55b4269a",
    "metadata": {},
    "outputs": [
@@ -13452,7 +13452,7 @@
        "  '홈페이지주소': None}]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13463,7 +13463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "c5f72cb4",
    "metadata": {},
    "outputs": [
@@ -13473,7 +13473,7 @@
        "327"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13484,7 +13484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "3845daca",
    "metadata": {},
    "outputs": [
@@ -15169,6 +15169,11 @@
     "addresses_ = []\n",
     "geocodes = []\n",
     "markets = []\n",
+    "open_dates = []\n",
+    "market_types = []\n",
+    "scales = []\n",
+    "market_items = []\n",
+    "homepages = []\n",
     "\n",
     "# '점포수'가 200개 이상인 경우만 필터링하여 데이터 추출 및 지리정보 가져오기\n",
     "for item in result:\n",
@@ -15176,12 +15181,22 @@
     "        address = item.get(\"주소(지번)\")\n",
     "        address_ = item.get(\"주소(도로명)\")\n",
     "        market = item.get(\"시장(상점가명)\")\n",
+    "        open_date = item.get(\"시장개설주기\")\n",
+    "        market_type = item.get(\"시장유형\")\n",
+    "        market_item = item.get(\"취급품목\")\n",
+    "        scale = item.get(\"점포수\")\n",
+    "        homepage = item.get('홈페이지주소')\n",
     "        if address:\n",
     "            geocode = get_geocode(address)\n",
     "            addresses.append(address)\n",
     "            addresses_.append(address_)\n",
     "            markets.append(market)\n",
     "            geocodes.append(geocode)\n",
+    "            open_dates.append(open_date)\n",
+    "            market_types.append(market_type)\n",
+    "            scales.append(scale)\n",
+    "            market_items.append(market_item)\n",
+    "            homepages.append(homepage)\n",
     "\n",
     "# addresses 배열과 geocodes 배열에 저장된 데이터 출력\n",
     "for i in range(len(addresses)):\n",
@@ -15194,7 +15209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "d0807cf1",
    "metadata": {},
    "outputs": [],
@@ -15213,7 +15228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "7660e4d7",
    "metadata": {},
    "outputs": [
@@ -15233,7 +15248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "bb63d8e1",
    "metadata": {},
    "outputs": [
@@ -15255,7 +15270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "id": "db3988e1",
    "metadata": {},
    "outputs": [
